k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  namespace: ns-weather-production
  labels:
    app: weather-app
spec:
  type: LoadBalancer
  selector:
    app: weather-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
